1.2.3
- fixed desync https://forums.factorio.com/viewtopic.php?f=23&t=46873
- duplicate names are checked across all train-stops instead of only LTN Stops
- improved performance of checking duplicate names by using events introduced with 0.15

1.2.2
- overloading trains updates delivery size once per update interval (before update was only done once train leaves provider)
- fixed overloading trains reserved too much of an item/fluid in provider
- fixed fluid deliveries where accidentally deleted at departure from provider

1.2.1
- updated mod setting descriptions
- replaced floating-text hack to get inventory sizes with 0.15 functions
- added support of icons{} to signal generation

1.2.0
- moved config.lua to mod settings
- added support for any FluidWagon for fluid transport
- removed support of RailTanker (RailTankers will be ignored, removed fake item conversions)
- short circuit detection uses network id
  - removed grey detection signal from output

1.1.2
- intermediate 0.15 support	(not thoroughly tested)

1.1.1
- deconstruction of broken stops properly removes stop and surrounding I/O entities
- automatically remove orphaned lamp control entities
- speed up loading by skipping parts of initialization according to old_version
- messages differing only in item count are treated as the same message by the message filter
- decreased delivery-removed-timeout and delivery-removed-train-invalid from loglevel 2 to 1

1.1.0
- added finish_loading to config: prevents trains from leaving while inserters are working by adding 2s inactivity

1.0.1
- fixed possible errors with mods changing the base train stop recipe

1.0.0
- Dispatcher uses linear distance between depot and provider when choosing between equally valid trains
- localized console Messages for log levels 1, 2 and 3
- localized Items & Fluids in Messages (thanks to MagmaMcFry)
- added signal "Locked Slots per Wagon"

0.10.2